[gd_scene load_steps=6 format=3 uid="uid://dhko3nrs46lct"]

[ext_resource type="Script" path="res://rescue_path.gd" id="1_6kg81"]
[ext_resource type="Script" path="res://drowning_person.gd" id="2_vlau8"]
[ext_resource type="Script" path="res://eye.gd" id="3_gop38"]
[ext_resource type="PackedScene" uid="uid://cafs45scjj4tt" path="res://pulse.tscn" id="4_nhhfc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mcha4"]
radius = 30.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_6kg81")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-196.505, 6.33531)

[node name="DrowningPerson" type="PathFollow2D" parent="Path2D"]
position = Vector2(332.505, 401.665)
rotation = -0.88035
script = ExtResource("2_vlau8")

[node name="Eye" type="Node2D" parent="Path2D/DrowningPerson"]
script = ExtResource("3_gop38")

[node name="Area2D" type="Area2D" parent="Path2D/DrowningPerson"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/DrowningPerson/Area2D"]
shape = SubResource("CircleShape2D_mcha4")

[node name="Pulse" parent="Path2D/DrowningPerson" instance=ExtResource("4_nhhfc")]

[connection signal="hovered" from="Path2D/DrowningPerson" to="." method="_on_drowning_person_hovered"]
[connection signal="input_event" from="Path2D/DrowningPerson/Area2D" to="Path2D/DrowningPerson" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Path2D/DrowningPerson/Area2D" to="Path2D/DrowningPerson" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Path2D/DrowningPerson/Area2D" to="Path2D/DrowningPerson" method="_on_area_2d_mouse_exited"]
